Spring/src/main/kotlin/com/example/spring/domain/base/error/BaseErrorCode.kt
package com.example.spring.domain.base.error

interface BaseErrorCode {
    fun getReason(): ErrorReasonDto?

    fun getReasonHttpStatus(): ErrorReasonDto?
}